--- a/MlbStatisticsApi/MlbStatisticsApi.csproj
+++ b/MlbStatisticsApi/MlbStatisticsApi.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.9" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MLBWebScraper\MLBWebScraper.csproj" />
   </ItemGroup>
 
 </Project>
